# SGrPython

./: .gitignore  README.md  SGr_04_0016_xxxx_ABBMeterV0.2.1.xml  SGr_04_0018_CLEMAP_EIcloudEnergyMonitorV0.2.0.xml  SGr_04_0018_CLEMAP_EIcloudEnergyMonitorV0.2.1.xml  SGr_EI_CLEMAPCloudV1.0.0.xml  SGr_HeatPump_Test.xml  SmartGridReady_Test_Questions.py  abb_terra_01.xml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py
.zed/: tasks.json
_logFiles/: DeviceLog.log.2023-12-12  DeviceLog.log.2023-12-22  Event.log.2023-12-12  Event.log.2023-12-22
commhandler/: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  ruff.toml  setup.py
commhandler/docs/: conf.py  index.rst
commhandler/examples/: DEPRECATED_introspective-reader.py  SGr_test_david.py  SmartGridReady_Test_Questions.py  example_generic.py  modbus_async.py  modbus_sync.py  playground.ipynb  restapi_async.py  restapi_sync.py  test_deviceAPI.py
commhandler/examples/clemap_sensor/: clemap_sensor.ipynb
commhandler/examples/eid/: SGr_04_mmmm_dddd_CLEMAPEnergyMonitorEIV0.2.1.xml  abb_terra_01.xml
commhandler/examples/ini/: SGr_04_mmmm_dddd_CLEMAPEnergyMonitorEIV0.2.1_example.ini  abb_terra_01_example.ini
commhandler/examples/xml/: SGr_02_mmmm_dddd_SwiSBox_Actuator.xml  SGr_04_0015_xxxx_StiebelEltron_HeatPumpV0.2.1.xml  SGr_04_0021_xxxx_FroniusSymoV0.2.1.xml  SGr_04_0033_0000_CTA_HeatPumpV0.2.1.xml  SontexSupercal5V0.2.1.xml
commhandler/src/sgr_commhandler/: README.md  __init__.py  auxiliary_functions.py  declaration_library.py  device_builder.py  exceptions.py
commhandler/src/sgr_commhandler/api/: __init__.py  configuration_parameter.py  data_point_api.py  data_types.py  device_api.py  dynamic_parameter.py  function_profile_api.py  functional_profile_api.py  value.py
commhandler/src/sgr_commhandler/driver/: __init__.py
commhandler/src/sgr_commhandler/driver/contact/: __init__.py  contact_interface_async.py
commhandler/src/sgr_commhandler/driver/generic/: __init__.py  generic_interface_async.py
commhandler/src/sgr_commhandler/driver/messaging/: __init__.py  messaging_client_async.py  messaging_filter.py  messaging_interface_async.py
commhandler/src/sgr_commhandler/driver/modbus/: __init__.py  modbus_client_async.py  modbus_helper.py  modbus_interface_async.py  modbus_rtu_client_async.py  modbus_rtu_interface_async.py  modbus_tcp_client_async.py  modbus_tcp_interface_async.py  payload_decoder.py  shared_client.py
commhandler/src/sgr_commhandler/driver/modbus_rtu/: modbusRTU_interface_async.py
commhandler/src/sgr_commhandler/driver/modbus_tcp/: modbusRTU_client.py  modbus_client.py  modbus_interface.py
commhandler/src/sgr_commhandler/driver/rest/: __init__.py  authentication.py  authtentication.py  request.py  restapi_client_async.py  restapi_interface_async.py
commhandler/src/sgr_commhandler/utils/: __init__.py  jmespath_mapping.py  template.py  value_util.py
commhandler/src/sgr_commhandler/validators/: __init__.py  resolver.py  validator.py
commhandler/tests/test_devices/: test_device_builder.py  test_device_introspection.py
commhandler/tests/test_devices/eids/: EI4_UniDirFlexLoad_3631Lv2.xml  SGr_00_0016_dddd_ABB_B23_ModbusTCP_V0.3.xml  SGr_00_0016_dddd_ABB_B23_ModbusTCP_V0.4.xml  SGr_01_mmmm_dddd_Shelly_1PM_RestAPILocal_V0.1.xml  SGr_XX_HiveMQ_MQTT_Cloud.xml  test_eid_contacts_V0.1.xml  test_eid_generic_V0.1.xml
commhandler/tests/test_devices/ini/: SGr_00_0016_dddd_ABB_B23_ModbusTCP_V0.4.ini  SGr_01_mmmm_dddd_Shelly_1PM_RestAPILocal_V0.1.ini  SGr_XX_HiveMQ_MQTT_Cloud.ini
commhandler/tests/test_utils/: test_jmespath.py
commhandler/tests/test_validators/: test_validator.py
examples/: DEPRECATED_introspective-reader.py  SGr_04_0014_0000_WAGO_SmartMeterV0.2.1 (1).xml  SGr_04_0016_xxxx_ABBMeterV0.2.1.xml  SGr_04_mmmm_dddd_CLEMAPEnergyMonitorEIV0.2.1.xml  SGr_04_mmmm_dddd_Initial_ChargingStation_V0.5.0.xml  SGr_04_mmmm_dddd_Initial_ChargingStation_V0.5.0_2.xml  SGr_test_david.py  abb_terra_01.xml  config_CLEMAPEnMon_ressource_template.ini  example_generic.py  playground.ipynb  test_deviceAPI.py
sgr_library/: OLD_restapi_client.py  OLD_restapi_interface.py  README.md  __init__.py  auxiliary_functions.py  device_builder.py  exceptions.py  generic_interface.py  modbusRTU_client.py  modbusRTU_client_async.py  modbusRTU_interface.py  modbusRTU_interface_async.py  modbus_client.py  modbus_connect.py  modbus_connection.py  modbus_interface.py  payload_decoder.py  resource_errors.py  restapi_client.py  restapi_client_async.py  restapi_connect.py  restapi_interface.py  sgr_device.py  test.py
specification/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  setup.py
specification/docs/: .gitignore  conf.py  index.rst
specification/src/sgr_schema/: .gitignore
xml_files/: CLEMAP_EIcloudEnergyMonitorV0.1.2.xml  EI4_UniDirFlexFeedIn_3632Lv2.xml  EI4_UniDirFlexLoad_3631Lv2.xml  FullEi4Modbus_0_0036_0030_4_0.1_SGCP_BiDirFlexMgmt.xml  MEO_EI_Propilot_V0.0.1.xml  SGr_02_0003_0055_eCarupPICO 4061 1_v0.2.1.xml  SGr_02_0003_0055_eCarupPICO 4061 2_v0.2.1.xml  SGr_02_0003_0055_eCarupPICO_4061_v1.0.0.xml  abb_terra_01.xml  (+29 more)
(+263 files in other folders)
