[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sgr-commhandler"
dynamic = ["version"]
description = "SmartGridready CommHandler Library"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Robin Schoch" },
    { name = "Matthias Krebs" }
]
maintainers = [
    { name = "Matthias Krebs" }
]
dependencies = [
    "Jinja2>=3.0.0,<4.0.0",
    "jmespath>=1.0.0,<2.0.0",
    "pymodbus>=3.0.0,<3.9.0",
    "xsdata>=22.0.0,<23.0.0",
    "xmlschema>=3.0.0,<4.0.0",
    "aiohttp>=3.0.0,<4.0.0",
    "certifi",
    "cachetools>=5.0.0,<6.0.0",
    "sgr-specification>=2.1.0,<3.0.0"
]

[project.urls]
Homepage = "https://www.smartgridready.ch/"
Documentation = "https://smartgridready.github.io/SGrPython/docs/commhandler/"
Repository = "https://github.com/SmartGridready/SGrPython.git"
Issues = "https://github.com/SmartGridready/SGrPython/issues"
Changelog = "https://github.com/SmartGridready/SGrPython/blob/master/commhandler/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "examples"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "strict"
log_cli = true
log_cli_level = "DEBUG"
