[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sgr-specification"
dynamic = ["version"]
description = "SmartGridready Specification Library"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Robin Schoch" },
    { name = "Matthias Krebs" }
]
maintainers = [
    { name = "Matthias Krebs" }
]
dependencies = []

[project.urls]
Homepage = "https://www.smartgridready.ch/"
Documentation = "https://smartgridready.github.io/"
Repository = "https://github.com/SmartGridready/SGrSpecification.git"
Issues = "https://github.com/SmartGridready/SGrSpecification/issues"
Changelog = "https://github.com/SmartGridready/SGrPython/blob/master/specification/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# include XSD from package directory and 1 sub-directory
[tool.setuptools.package-data]
sgr_schema = ["*.xsd", "*/*.xsd"]
